// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have correct title for APP based component 1`] = `
<Helmet
  defer={false}
  encodeSpecialCharacters={true}
  title="projects.page"
/>
`;

exports[`should have correct title for portfolio base component 1`] = `
<Helmet
  defer={false}
  encodeSpecialCharacters={true}
  title="projects.page"
/>
`;

exports[`should have correct title for project component 1`] = `
<Helmet
  defer={false}
  encodeSpecialCharacters={true}
  title="code.page"
/>
`;
